--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,13 @@
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
     "mongoose": "^8.4.0",
-    "nodemon": "^3.1.0"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon app.js"
   },
