--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,10 +1,17 @@
 {
-  "name": "Qader",
+  "name": "Qader E-Commerce",
   "short_name": "Qader",
   "description": "Qader is an ecommerce website for selling adaptive equipment, disability aids, assistive technology, mobility solutions, inclusive ecommerce, disability-friendly jobs, job opportunities for disabled, accessible workplace, assistive devices, disability products, independent living aids",
   "background_color": "#f5f5f5",
   "theme_color": "#0d6efd",
   "display": "standalone",
   "orientation": "portrait",
-  "start_url": "/"
+  "start_url": "/",
+  "icons": [
+    {
+      "src": "/icons/maskable-icon.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ]
 }
